# scorbot_er

./: README.md
scorbot_er/: CMakeLists.txt  package.xml
scorbot_er_description/: CMakeLists.txt  package.xml
scorbot_er_description/config/: controllers.yaml  gazebo_ros_control_params.yaml  joints.yaml  joints_states.yaml  trajectory_control.yaml
scorbot_er_description/launch/: control.launch  controllers.launch  display.launch  gazebo.launch  spawn.launch
scorbot_er_description/meshes/: base_link.stl  gripper_left.stl  gripper_right.stl  link0.stl  link1.stl  link2.stl  link3.stl  link4.stl  link5.stl  support.stl
scorbot_er_description/rviz/: scorbot_er.rviz
scorbot_er_description/src/: test_gazebo
scorbot_er_description/urdf/: links_joints.xacro  robot_parameters.xacro  scorbot_er.xacro
scorbot_er_description/worlds/: tryout.world
scorbot_er_moveit_config/: CMakeLists.txt  package.xml
scorbot_er_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  scorbot_er.srdf
scorbot_er_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  scorbot_er_bringup_moveit.launch  scorbot_er_moveit_controller_manager.launch.xml  sensor_manager.launch.xml  (+4 more)
